recursion.logo.lessons.recursion.logo.koch.Crab.scala.error
Crab:3: error: not found: value snowSide
    snowSide(levels-1, length/sqrt(2))
    ^Crab:3: error: not found: value sqrt
    snowSide(levels-1, length/sqrt(2))
                              ^Crab:5: error: not found: value snowSide
  	snowSide(levels-1, length/sqrt(2))
        ^Crab:5: error: not found: value sqrt
  	snowSide(levels-1, length/sqrt(2))
                                  ^Crab:7: error: not found: value snowSide
    snowSide(levels-1, length/sqrt(2))
    ^Crab:7: error: not found: value sqrt
    snowSide(levels-1, length/sqrt(2))
                              ^Crab:9: error: not found: value snowSide
    snowSide(levels-1, length/sqrt(2))
    ^Crab:9: error: not found: value sqrt
    snowSide(levels-1, length/sqrt(2))
                              ^