recursion.logo.lessons.recursion.logo.koch.Crab.scala.code
def crab(levels:Int, length:Double) {
  if(levels!= 0){
    snowSide(levels-1, length/sqrt(2))
  	gauche(60)
  	snowSide(levels-1, length/sqrt(2))
    droite(120)
    snowSide(levels-1, length/sqrt(2))
    gauche(60)
    snowSide(levels-1, length/sqrt(2))
  }
  if(levels == 0){
    avance(length)
  }
}
